fix: max height overflow interactive page

--- a/src/components/Interactive/Interactive.scss
+++ b/src/components/Interactive/Interactive.scss
@@ -7,7 +7,7 @@ $block: '.#{variables.$ns}interactive';
 #{$block} {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     background-image: url('../../assets/interactive_page_bg.jpg');
     background-size: cover;
